# moveit_scenarios

./: CMakeLists.txt  package.xml  readme.txt
data/: goals.csv  goals_3lev.csv  results-no-torques.csv  results-with-torques-mhastar.csv  results-with-torques.csv  torque_points.csv
data/apc/: dropoff_pose_list.txt  image_acquisition_pose_list.txt  localization_pose_list.txt  preposition_pose_list.txt  withdraw_poses.txt
launch/: apc_test_suite.launch  bootstrap_birdhouse_goals.launch  pr2.launch  sample_birdhouse_goals.launch  setup_birdhouse.launch  setup_shelves.launch  ur5.launch
meshes/: countertop.stl  handrail.stl
meshes/bookshelf/: bookshelf.stl
meshes/industrial/: industrial.stl
meshes/table/: table.stl  table1.stl
meshes/tunnel/: tunnel.stl
meshes/turntable/: turntable_base.dae  turntable_base_with_texture.dae  turntable_base_with_texture.skp  turntable_rotating_surface.dae  turntable_rotating_surface_with_texture.dae  turntable_rotating_surface_with_texture.skp  turntable_suction_cup.dae  turntable_suction_cup_with_texture.dae  turntable_suction_cup_with_texture.skp
scenarios/: scenario.yaml
scenarios/roman/: scenario.yaml
scenarios/roman/tabletop/: scenario.yaml
scenarios/roman/tabletop/01/: scenario.yaml
scenarios/roman/tabletop/02/: scenario.yaml
scenarios/roman/tabletop/03/: scenario.yaml
scenarios/roman/tabletop/04/: scenario.yaml
scripts/: add_bookshelf  add_ground_plane  add_handrail  add_industrial  add_table  add_table_mesh  add_tunnel  add_turntable  example
src/: add_table.cpp  apc_test_suite.cpp  birdhouse_test_suite.cpp  birdhouse_test_suite.h  compute_torque_manifold.cpp  distance_field_test.cpp  run_moveit_tests.cpp  sample_birdhouse_goals.cpp  sync_box.cpp  sync_mesh.cpp  torque_manifold_bb.cpp
