<package format="2">
  <name>moveit_tests</name>
  <version>0.0.0</version>
  <description>The moveit_tests package</description>

  <author email="andrew.dornbush@gmail.com">Andrew Dornbush</author>
  <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>

  <depend>actionlib</depend>
  <depend>boost</depend>
  <depend>geometry_msgs</depend>
  <depend>leatherman</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>roscpp</depend>
  <depend>sbpl_geometry_utils</depend>
  <depend>visualization_msgs</depend>
  <depend>sbpl_arm_planner</depend>
</package>
